# firebird

./: .editorconfig  CMakeLists.txt  CMakeLists_bak.txt  CMakePresets.json  README.md
builds/cmake/: BuildFunctions.cmake  Configure.cmake  Generator.cmake  Layout.cmake  Projects.cmake  SourceGroups.cmake
cmake/: BuildFunctions.cmake  Common.cmake  Generator.cmake  Layout.cmake  Preprocess.cmake  Projects.cmake
src/: CMakeLists.txt
src/common/: unicode_util.cpp
src/common/classes/: alloc.cpp  alloc.h
src/gpre/languages/: fbrmclib.cpp
src/include/firebird/: IdlFbInterfaces.h
src/jrd/: sqz.h
src/jrd/extds/: InternalDS.cpp
src/remote/: CMakeLists.txt
src/remote/server/os/win32/: cntl.cpp  property.cpp  window.cpp
